--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,10 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name='viewport' content='width=deivce-width, initial-scale=1.0'>
 </head>
 <body>
-	
+<div class='well'> Hello </div>	
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
