--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,17 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <meta name='viewport' content='width=deivce-width, initial-scale=1.0'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 </head>
 <body>
 	<%= render 'shared/header' %>
 	
-	<% flash.each do |key, value| %>
-		<div class="alert alert-<%= key %>"><%= value %></div>
+	<% unless flash.blank? %>
+		<div class = "alert-box success">
+			<% flash.each do |key, value| %>
+				<div class="alert alert-<%= key %>"><%= value %></div>
+			<% end %>
+		</div>
 	<% end %>
 	
 	<%= yield %>
