--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,5 +1,9 @@
-- if user_signed_in?
-	= link_to "Sign out!", destroy_user_session_path, :method => :delete
-- else
-	= link_to "Sign up!", signup_path
-	= link_to "Sign in.", signin_path
+%ul#zurBar
+	- if user_signed_in?
+		%li
+			= link_to "Log Out!", destroy_user_session_path, :method => :delete
+	- else
+		%li
+			= link_to "Sign up!", signup_path
+		%li
+			= link_to "Log In", signin_path
