--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -2,3 +2,5 @@
 	="Welcome to #{@user.email}'s page"
 %h4
 	="Github account: #{@github}"
+%h4	
+	=link_to "Edit", edit_user_profile_path([current_user])
