Styled Edit Button

--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -4,4 +4,4 @@
     %br/
     = f.text_field :github
   .actions
-    = f.submit "Update"
+    = f.submit "Update", :class => "small round blue button"
