--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -2,6 +2,8 @@
 	= "Welcome to #{@user.email}'s page"
 %h4
 	= "Github account: #{@github}"
+.profile_gravatar
+	= gravatar_for current_user
 - if @user == current_user
 	%h4
 		= link_to "Edit", edit_user_profile_path([@user])
