--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,4 +1,6 @@
 %ul#zurBar
+	%li
+		= link_to "Home", root_path
 	- if user_signed_in?
 		%li
 			= link_to "Log Out!", destroy_user_session_path, :method => :delete
